--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
       <section class="strategy">
         <div class="container strategy-container">
-          <h2 class="hydenheader">Strategages</h2>
+          <h2 class="visually-hidden">Strategages</h2>
           <ul class="strategylist">
-            <li>
+            <li class="strategylistitem">
               <h3 class="strategyheader">Strategy</h3>
               <p class="strategyparagraf">
                 Our goal is to identify the business problem to walk away with
@@ -102,8 +102,10 @@
                 alt="A photo of a man with beard"
                 width="264"
               />
-              <h3 class="teamheader">Mark Guerrero</h3>
-              <p class="teamparagraf">Product Designer</p>
+              <div class="teamworkercontainer">
+                <h3 class="teamheader">Mark Guerrero</h3>
+                <p class="teamparagraf">Product Designer</p>
+              </div>
             </li>
             <li class="teamitem">
               <img
@@ -111,18 +113,24 @@
                 alt="A young man with a wide smile"
                 width="264"
               />
-              <h3 class="teamheader">Tom Ford</h3>
-              <p class="teamparagraf">Frontend Developer</p>
+              <div class="teamworkercontainer">
+                <h3 class="teamheader">Tom Ford</h3>
+                <p class="teamparagraf">Frontend Developer</p>
+              </div>
             </li>
             <li class="teamitem">
               <img src="./images/img2.jpg" alt="A woman" width="264" />
-              <h3 class="teamheader">Camila Garcia</h3>
-              <p class="teamparagraf">Marketing</p>
+              <div class="teamworkercontainer">
+                <h3 class="teamheader">Camila Garcia</h3>
+                <p class="teamparagraf">Marketing</p>
+              </div>
             </li>
             <li class="teamitem">
               <img src="./images/img3.jpg" alt="A man" width="264" />
-              <h3 class="teamheader">Daniel Wilson</h3>
-              <p class="teamparagraf">UI Designer</p>
+              <div class="teamworkercontainer">
+                <h3 class="teamheader">Daniel Wilson</h3>
+                <p class="teamparagraf">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -134,33 +142,45 @@
           <ul class="portfoliolist">
             <li class="portfoliolistitem">
               <img src="./images/img4.jpg" alt="image" width="360" />
-              <h3 class="portfolioheader">Banking App</h3>
-              <p class="portfolioparagraf">App</p>
+              <div class="portfoliocontainer">
+                <h3 class="portfolioheader">Banking App</h3>
+                <p class="portfolioparagraf">App</p>
+              </div>
             </li>
             <li class="portfoliolistitem">
               <img src="./images/img5.jpg" alt="image" width="360" />
-              <h3 class="portfolioheader">Cashless Payment</h3>
-              <p class="portfolioparagraf">Marketing</p>
+              <div class="portfoliocontainer">
+                <h3 class="portfolioheader">Cashless Payment</h3>
+                <p class="portfolioparagraf">Marketing</p>
+              </div>
             </li>
             <li class="portfoliolistitem">
               <img src="./images/img6.jpg" alt="image" width="360" />
-              <h3 class="portfolioheader">Meditation App</h3>
-              <p class="portfolioparagraf">App</p>
+              <div class="portfoliocontainer">
+                <h3 class="portfolioheader">Meditation App</h3>
+                <p class="portfolioparagraf">App</p>
+              </div>
             </li>
             <li class="portfoliolistitem">
               <img src="./images/img7.jpg" alt="image" width="360" />
-              <h3 class="portfolioheader">Taxi Service</h3>
-              <p class="portfolioparagraf">Marketing</p>
+              <div class="portfoliocontainer">
+                <h3 class="portfolioheader">Taxi Service</h3>
+                <p class="portfolioparagraf">Marketing</p>
+              </div>
             </li>
             <li class="portfoliolistitem">
               <img src="./images/img8.jpg" alt="image" width="360" />
-              <h3 class="portfolioheader">Screen Illustrations</h3>
-              <p class="portfolioparagraf">Design</p>
+              <div class="portfoliocontainer">
+                <h3 class="portfolioheader">Screen Illustrations</h3>
+                <p class="portfolioparagraf">Design</p>
+              </div>
             </li>
             <li class="portfoliolistitem">
               <img src="./images/img9.jpg" alt="image" width="360" />
-              <h3 class="portfolioheader">Online Courses</h3>
-              <p class="portfolioparagraf">Marketing</p>
+              <div class="portfoliocontainer">
+                <h3 class="portfolioheader">Online Courses</h3>
+                <p class="portfolioparagraf">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -168,7 +188,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="logo" href="./index.html"
+        <a class="footerlogo" href="./index.html"
           >Web<span class="logolink">Studio</span></a
         >
         <p class="footerparagraf">
